# data-science-lecture

./: README.md
data-analytics-deep-dive/: README.md
datahandling/: README.md  boolean indexing & isin.ipynb  lambda 정리.ipynb  map, apply, applymap.ipynb  pd.cut & pd.qcut.ipynb  데이터프레임 병합.ipynb  데이터프레임 열(column) 재구성.ipynb  시계열 데이터(timeseries), Timestamp & Period.ipynb  인덱스 활용 및 정렬.ipynb  피벗테이블.ipynb
deploy-model-fastapi/: main.py  pyproject.toml
deploy-model-fastapi/data/: ref.md
deploy-model-fastapi/model/: my_diabetes_predict_model.pkl
deploy-model-fastapi/notebook/: modeling.ipynb
langchain/: 01_LangChain시작하기.ipynb  test.py
langchain/01_tutorials/: 01_simple_llm_app.py  pyproject.toml
langchain/tutorials/chatbot/: app.py  pyproject.toml
langchain/tutorials/simple_app/: app.py  pyproject.toml
mju-data-analytics-programming/: 1주차.ipynb  3주차.ipynb  6주차_Telecom_Users.ipynb  6주차과제_titanic데이터 시각화.ipynb  8주차.ipynb  9주차.ipynb  README.md  TITANIC 생존률 분석.ipynb  map, apply, applymap.ipynb
mju-machinelearning-lecture/: 5주차_머신러닝.ipynb  6주차_머신러닝.ipynb  README.md  머신러닝 7주차.ipynb  머신러닝 중간고사 대비.ipynb  머신러닝 중간고사 실습예제.ipynb  머신러닝_10주차.ipynb  머신러닝_11주차.ipynb  머신러닝_9주차.ipynb  병원개폐업 의사결정나무.ipynb  연관규칙 분석.ipynb
mju-natural-language-processing/: 12주차_LDA.ipynb  12주차_LSA.ipynb  12주차_최적의_토픽개수_구하기.ipynb  README.md  Selenium_Instagram_IMGCrolling.ipynb  Word2Vec_With_Movie_Review.ipynb  네이버기사_토픽추출.ipynb  네이버증권 크롤링.ipynb  로지스틱회귀분석_네이버영화 리뷰 분석.ipynb  빅데이터분석_WEEK1.ipynb  빅데이터분석_WEEK11.ipynb  빅데이터분석_WEEK2(titanic_EDA).ipynb  빅데이터분석_WEEK3.ipynb  빅데이터분석_WEEK4.ipynb  빅데이터분석_WEEK5(웹 크롤링).ipynb  빅데이터분석_WEEK6.ipynb  빅데이터분석_WEEK7.ipynb  워드클라우드(7번방의 선물 리뷰).ipynb  정규표현식과제.ipynb
sanghwalcoding-tensorflow/: 1. Tensorflow 102.ipynb  1.레모네이드 판매 예측.ipynb  2. Tensorflow 데이터와 차원.ipynb  2.보스턴 집값 예측_수식과 퍼셉트론.ipynb  3. Tensor 이미지 데이터셋 구경하기.ipynb  3. 학습의 실제.ipynb  4. Tensorflow 이미지 구경하기(실습).ipynb  5. Hidden Layer.ipynb  5. Tensorflow Flatten.ipynb  6. Hidden Layer 실습.ipynb  README.md  (+6 more)
(+139 files in other folders)
