[tool.poetry]
name = "deploy-model-fastapi"
version = "0.1.0"
description = ""
authors = ["kimdong799 <kimdong799@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
numpy = ">=1.17,<2.0"
scikit-learn = "^1.5.1"
transformers = "^4.42.4"
tensorflow = "^2.0.0"
tensorflow-io-gcs-filesystem = "^0.28.0"  # 해당 버전 추가

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
