[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["kimdong799 <kimdong799@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.12"
langchain-community = "^0.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
